{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "69238f40-dc99-4948-a1db-081d47b5f2b5",
            "actions": [
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "afa24044-2428-4fbe-8995-bd96c4624946",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1bbca3e0-d584-4782-a077-157b3f4b9d88",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TargetNextUnit",
                    "type": "Button",
                    "id": "1bbf6886-e6e7-49c1-b917-238e6e9e295e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetPreviousUnit",
                    "type": "Button",
                    "id": "18ec8dba-35a6-4c97-ae43-b8f4872fab17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d2f995b-529b-4328-9049-abeb47df2e32",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b82a1c84-068d-4b4b-a4cb-4b697d46eddd",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e94e700-9283-499e-8405-c7fdc0fda960",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6139261c-da6b-425e-8249-cc64abebc330",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7357b678-0a3d-4c3c-b0da-efb3b10445f8",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d8c24d7-6953-4dbd-b1a8-528d58242e3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetNextUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5505be5c-6a33-4fed-8a64-8e3b0761a4fa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetPreviousUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Throw",
            "id": "720c091c-a82d-4f4c-9b46-39d94cc289a9",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "145b6453-030f-4756-989b-cb977e4e681e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "3f0502eb-783f-4b82-bf7f-58e52ce3c8a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0965f10-61e2-416c-9e20-2550a4bc35a7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87e39ef8-280f-4d21-a984-b71d5f3130c3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a61b86ae-f622-4a33-8eef-c2642729f64f",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}